<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:background="@color/main_bg"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:text="@string/filter_title" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_layout"
        android:layout_above="@+id/apply_btn"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/filter_by_group_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/filter_by_group" />

    <Spinner
        android:id="@+id/filter_by_group_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/filter_by_group_textView"
        android:layout_below="@id/filter_by_group_textView"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/filter_by_severity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/filter_by_group_spinner"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/filter_By_severity" />

    <Spinner
        android:id="@+id/filter_by_severity_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/filter_by_severity_textView"
        android:layout_below="@id/filter_by_severity_textView"
        android:layout_marginTop="10dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/filter_by_severity_spinner"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/filter_by_duration_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/line2"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/filter_by_duration" />
    <LinearLayout
        android:id="@+id/date_from_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/filter_by_duration_textView"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:weightSum="3"
        >

        <TextView
            android:id="@+id/from_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:text="@string/from" />
        <EditText
            android:id="@+id/from_date_edit"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:enabled="true"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="Date is in format 29/11/2014"

            />

        <ImageView
            android:id="@+id/from_date_imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
           android:src="@drawable/ic_date_range_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_to_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/date_from_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:weightSum="3"
        >

        <TextView
            android:id="@+id/to_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:text="@string/to" />
        <EditText
            android:id="@+id/to_date_edit"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:enabled="true"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="Date is in format 29/11/2014"

            />

        <ImageView
            android:id="@+id/to_date_imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_date_range_black_24dp" />
    </LinearLayout>
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
       android:layout_below="@id/date_to_layout"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/filter_by_status_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/line3"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/filter_by_status" />

    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/filter_by_status_textView"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:weightSum="3"
        >

        <CheckBox
            android:id="@+id/assigned_checkBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/assigned"
            android:textSize="12sp" />
        <CheckBox
            android:id="@+id/completed_checkBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/completed" />
        <CheckBox
            android:id="@+id/request_checkBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/request_info" />
            />


    </LinearLayout>
            <View
                android:id="@+id/line"
                android:layout_below="@+id/status_layout"
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/line"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/filter_by_text" />

            <EditText
                android:id="@+id/filter_editText"
                style="@style/filterEditTextStyle"
                android:layout_below="@id/textView"
                android:hint="Text"

                />

        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:text="@string/apply_filter" />
</RelativeLayout>